--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,10 +19,11 @@ services:
     restart: always
 
   app:
-    build:
-      context: .
-      args:
-        APP_VERSION: 1.0.0
+    image: pharmacy-system:v1.2.3
+    # build:
+    #   context: .
+    #   args:
+    #     APP_VERSION: 1.0.0
     container_name: pharmacy-app
     depends_on:
       db:
