feat: batchNo pipeline, inventory date columns, order_item schema fixes

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -33,7 +33,11 @@ spring:
     open-in-view: false
 
   flyway:
-    enabled: false
+    enabled: true
+    baseline-on-migrate: true
+    baseline-version: 0
+    locations: classpath:/db/migration
+    validate-on-migrate: false
 
   servlet:
     multipart:
